--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,10 +151,9 @@ body{
 }
 
 .pet {
-   
    float: left;
-   width: 31%;
-   margin: 5px;
+   margin: 20px;
+    
   
 }
 
@@ -168,4 +167,24 @@ body{
   
 button {
     margin: 10px;
+}
+
+.pet img {
+    /* max-height: 100%;
+    max-width: 100%; */
+    height: 200px;
+    width: 200px;
+   
+}
+
+#petImage img {
+    /* max-height: 100%;
+    max-width: 100%; */
+    height: 300px;
+    width: 300px;
+   
+}
+
+#aboutImage {
+   max-width: 100%;
 }
