--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,18 +143,73 @@ body{
 }
 
 .containerMain {
-    background-image: url('/images/jumbotronbackground.jpg');
-  
-    background-size: cover;
-    padding: 200px;
-   
+    background-image: url(../images/jumbotronbackground.jpg);
+  display: block;
+  position: relative;
+    
 }
+
+.containerMain::after {
+    content: "";
+    
+    opacity: 0.1;
+    
+    position: absolute;
+    z-index: -1;   
+  }
+
+#text {
+    color: #56c6c6;
+    position: relative;
+    z-index: 2;
+}
+
+
+.containerMain {
+    position: relative;
+    background: black;
+    overflow: hidden;
+}
+.containerMain:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.5;
+    background-image: url(../images/jumbotronbackground.jpg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    -ms-background-size: cover;
+  -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.containerMain h1 {
+    padding: 50px;
+    text-align: center;
+    z-index: 2;
+    position: relative;
+    color: #fff;
+} 
+
+
+
+
+
+
+
 
 .pet {
    float: left;
-   margin: 20px;
-    
+   margin: 10px;
   
+  
+ 
 }
 
 .pet > p {
@@ -170,16 +225,14 @@ button {
 }
 
 .pet img {
-    /* max-height: 100%;
-    max-width: 100%; */
+ 
     height: 200px;
     width: 200px;
    
 }
 
 #petImage img {
-    /* max-height: 100%;
-    max-width: 100%; */
+   
     height: 300px;
     width: 300px;
    
