--- a/public/css/style.css
+++ b/public/css/style.css
@@ -312,7 +312,9 @@ table, th, td {
     box-shadow: 7px 7px 5px lightgrey;
 }
 
-
+#filter {
+  margin-left: 50px;
+}
 
 
 
@@ -485,9 +487,49 @@ table, th, td {
   }
   
   .petJ {
-    /* display: none; */
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
   }
   
+  /* Float Shadow */
+#logo {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+#logo:before {
+  pointer-events: none;
+  position: absolute;
+  z-index: -1;
+  content: '';
+  top: 100%;
+  left: 5%;
+  height: 10px;
+  width: 90%;
+  opacity: 0;
+  background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+  /* W3C */
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform, opacity;
+  transition-property: transform, opacity;
+}
+#logo:hover, #logo:focus, #logo:active {
+  -webkit-transform: translateY(-5px);
+  transform: translateY(-5px);
+  /* move the element up by 5px */
+}
+#logo:hover:before, #logo:focus:before, #logo:active:before {
+  opacity: 1;
+  -webkit-transform: translateY(5px);
+  transform: translateY(5px);
   
+}
