--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,8 @@
 }
 
 #myFooter .footer-copyright p {
-    margin: 10px;
+
+    margin: 20px;
     color: #ccc;
 }
 
@@ -141,7 +142,7 @@
 }
 
 #myFooter h2 a{
-    font-size: 50px;
+    font-size: 90px;
     text-align: center;
     color: #fff;
 }
@@ -149,6 +150,7 @@
 #myFooter a {
     color: #d2d1d1;
     text-decoration: none;
+    font-size: 17px;
 }
 
 #myFooter a:hover,
@@ -340,11 +342,11 @@ table, th, td {
 
 .coreValues {
   font-size: 20px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Alegreya', serif;
 }
 
 .navLink {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Alegreya', serif;
   font-size: 15px;
 }
 
@@ -621,4 +623,43 @@ table, th, td {
 .requestPet {
   height: 250px;
   width: 250px;
+}
+
+
+body {
+  font-family: 'Alegreya', serif;
+}
+
+#act {
+  margin-left: 20px;
+}
+
+.newName {
+  margin-left: 42px;
+}
+
+.newType {
+  margin-left: 72px;
+}
+
+.newBreed {
+  margin-left:  63px;
+}
+
+.newKennel {
+  margin-left: 44px;
+}
+
+.newStatus {
+  margin-left: 60px;
+}
+
+#petCarousel {
+  margin-left: -25px;
+}
+
+@media screen and (max-width: 700px) {
+  #petCarousel {
+    margin-left: 0px;
+  }
 }
